# kafka_time_testing

./: Cargo.toml
src/: consumer.rs  main.rs  producer.rs
