[package]
name = "kafka_time_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build","ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
ctrlc = "3.1.8"
lazy_static = "1.4"
config = "0.13.2"
envconfig = "0.10.0"
tokio = { version = "*", features = ["full"] }

# used for logger module.
reqwest = "0.11"
log = "0.4.17"
futures = "0.3"
log4rs = { version ="1.2.0", features = ["gzip"] }
chrono = "0.4.22"
env_logger = "0.10.0"
env-var = "1.0.1"